19990725-19:47 GMT+1 Bruno Cantero <bruno@issnet.net>
   + include/rddsys.ch, source/rdd/dbfntx0.prg, source/rdd/dbfntx1.c
     Skeleton for DBFNTX functions
   + tests/working/testrdd.prg
     Test for RDD functions
   * source/rdd/dbcmd.c
     Bug fixed
   * source/rdd/rddsys.prg
     Register the default driver (DNFNTX)
   * include/rdd.api, include/rdd_api.old
     File renamed

19990724-21:20 EDT Paul Tucker <ptucker@sympatico.ca>
   * makefile.vc
   * tests/working/buildvc.bat
     + added support for the rdd.

19990725-01:00 GMT+2 Ryszard Glab <rglab@imid.med.pl>

        *source/rtl/memvars.c
         * corrected code that handle values' cache
         + added code to test variables with the names that are the same
          as functions names
         * variables passed by reference are correctly handled now in
          PARAMETERS statement
         * renamed __PUBLIC to __MVPUBLIC and __PRIVATE to __MVPRIVATE
          all other functions related to memory variables will start
          with '__MV' prefix
         + added __MVXRELEASE function to release value stored in memvar
          variable (it can be used in RELEASE command)

        *source/vm/hvm.c
         * variables passed by reference are correctly handled now in
          PARAMETERS statement

        *source/compiler/harbour.y
         * the symbol table is generated correctly now if a memvar variable
           have the same name as one of used functions or is the same as the
           name of compiled module
         * simplified and cleared handling of symbol positions

        *source/compiler/harbour.l
         * MEMVAR keyword is handled correctly now

        *tests/working/memvar.prg
         + added code to test variables with the names that are the same
          as functions names

19990725-00:20 CET Felipe Coury
   * tests/working/bld32exe.bat
     changed for RDD
   + buildrdd.bat; rdd.b32
     makefiles for RDD
   * build32.bat
     changed for RDD
